--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </section>
 
       <section class="menu-container">
-        <h1 class="menu-title">Ours cakes</h1>
+        <h1 class="menu-title">Our cakes</h1>
         <div class="menu-items">
           <div class="menu-item">
             <img
