--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/default.css" />
     <link rel="stylesheet" href="css/home.css" />
     <link rel="stylesheet" href="css/header.css" />
+    <script src="script/cart.js" defer></script>
     <script
       src="https://kit.fontawesome.com/7e4dac37c7.js"
       crossorigin="anonymous"
@@ -18,7 +19,7 @@
         <div class="nav-container">
           <a href="/index.html"
             ><img
-              src="image/manalys-cake-delivery-logo.png"
+              src="image/manalys-dessert-delivery-logo.png"
               alt="manalys cake delivery logo"
           /></a>
 
@@ -31,6 +32,7 @@
 
         <button class="cart-button">
           <a href="cart.html">
+            <span id="cart-button-amount"> </span>
             <i class="fa-solid fa-cart-shopping"></i>
           </a>
         </button>
@@ -77,23 +79,26 @@
               </div>
             </div>
           </div>
-          <img src="image/manalys-cake-delivery-logo.png" />
+          <img src="image/manalys-dessert-delivery-logo.png" />
         </div>
       </section>
 
       <section class="menu-container">
         <h1 class="menu-title">Our cakes</h1>
         <div class="menu-items">
-          <div class="menu-item">
+          <div class="menu-item" data-name="Chocolate Cake" data-price="40">
             <img
               src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREcUrcH8BpmbJ7JAN8h68R9CcGICB-hFnLPw&s"
               alt=""
             />
-            <h3>Cake name</h3>
-            <p class="regular-text">Cake description</p>
-            <p class="regular-text">$0</p>
+            <h3>Chocolate Cake</h3>
+            <p class="regular-text">
+              Rich and moist chocolate sponge cake layered with creamy chocolate
+              frosting
+            </p>
+            <p class="regular-text">$40</p>
             <div class="menu-item-cart">
-              <form action="" method="post">
+              <form>
                 <label for="amount" class="regular-text">Amount:</label>
                 <select id="amount" class="menu-item-cart-amount" name="amount">
                   <option value="1">1</option>
@@ -103,22 +108,29 @@
                   <option value="5">5</option>
                 </select>
 
-                <button type="submit" class="menu-item-cart-button">
+                <button
+                  type="submit"
+                  class="menu-item-cart-button"
+                  onclick="addToCart(this)"
+                >
                   <i class="fa-solid fa-cart-shopping"></i>
                 </button>
               </form>
             </div>
           </div>
-          <div class="menu-item">
+          <div class="menu-item" data-name="Cheesecake" data-price="30">
             <img
               src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREcUrcH8BpmbJ7JAN8h68R9CcGICB-hFnLPw&s"
               alt=""
             />
-            <h3>Cake name</h3>
-            <p class="regular-text">Cake description</p>
-            <p class="regular-text">$0</p>
+            <h3>Cheesecake</h3>
+            <p class="regular-text">
+              A creamy and dense dessert with a graham cracker crust, often
+              topped with fruit or chocolate
+            </p>
+            <p class="regular-text">$30</p>
             <div class="menu-item-cart">
-              <form action="" method="post">
+              <form>
                 <label for="amount" class="regular-text">Amount:</label>
                 <select id="amount" class="menu-item-cart-amount" name="amount">
                   <option value="1">1</option>
@@ -128,22 +140,29 @@
                   <option value="5">5</option>
                 </select>
 
-                <button type="submit" class="menu-item-cart-button">
+                <button
+                  type="submit"
+                  class="menu-item-cart-button"
+                  onclick="addToCart(this)"
+                >
                   <i class="fa-solid fa-cart-shopping"></i>
                 </button>
               </form>
             </div>
           </div>
-          <div class="menu-item">
+          <div class="menu-item" data-name="Tiramisu" data-price="50">
             <img
               src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREcUrcH8BpmbJ7JAN8h68R9CcGICB-hFnLPw&s"
               alt=""
             />
-            <h3>Cake name</h3>
-            <p class="regular-text">Cake description</p>
-            <p class="regular-text">$0</p>
+            <h3>Tiramisu</h3>
+            <p class="regular-text">
+              An Italian dessert made of layers of coffee-soaked ladyfingers,
+              mascarpone cheese, and cocoa powder
+            </p>
+            <p class="regular-text">$50</p>
             <div class="menu-item-cart">
-              <form action="" method="post">
+              <form>
                 <label for="amount" class="regular-text">Amount:</label>
                 <select id="amount" class="menu-item-cart-amount" name="amount">
                   <option value="1">1</option>
@@ -153,22 +172,29 @@
                   <option value="5">5</option>
                 </select>
 
-                <button type="submit" class="menu-item-cart-button">
+                <button
+                  type="submit"
+                  class="menu-item-cart-button"
+                  onclick="addToCart(this)"
+                >
                   <i class="fa-solid fa-cart-shopping"></i>
                 </button>
               </form>
             </div>
           </div>
-          <div class="menu-item">
+          <div class="menu-item" data-name="Macarons" data-price="25">
             <img
               src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREcUrcH8BpmbJ7JAN8h68R9CcGICB-hFnLPw&s"
               alt=""
             />
-            <h3>Cake name</h3>
-            <p class="regular-text">Cake description</p>
-            <p class="regular-text">$0</p>
+            <h3>Macarons</h3>
+            <p class="regular-text">
+              Delicate French meringue-based cookies with a creamy filling,
+              available in various flavors.
+            </p>
+            <p class="regular-text">$25</p>
             <div class="menu-item-cart">
-              <form action="" method="post">
+              <form>
                 <label for="amount" class="regular-text">Amount:</label>
                 <select id="amount" class="menu-item-cart-amount" name="amount">
                   <option value="1">1</option>
@@ -178,22 +204,28 @@
                   <option value="5">5</option>
                 </select>
 
-                <button type="submit" class="menu-item-cart-button">
+                <button
+                  type="submit"
+                  class="menu-item-cart-button"
+                  onclick="addToCart(this)"
+                >
                   <i class="fa-solid fa-cart-shopping"></i>
                 </button>
               </form>
             </div>
           </div>
-          <div class="menu-item">
+          <div class="menu-item" data-name="Cupcakes" data-price="25">
             <img
               src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREcUrcH8BpmbJ7JAN8h68R9CcGICB-hFnLPw&s"
               alt=""
             />
-            <h3>Cake name</h3>
-            <p class="regular-text">Cake description</p>
-            <p class="regular-text">$0</p>
+            <h3>Cupcakes (dozen)</h3>
+            <p class="regular-text">
+              Small, individual cakes typically frosted and decorated
+            </p>
+            <p class="regular-text">$25</p>
             <div class="menu-item-cart">
-              <form action="" method="post">
+              <form>
                 <label for="amount" class="regular-text">Amount:</label>
                 <select id="amount" class="menu-item-cart-amount" name="amount">
                   <option value="1">1</option>
@@ -203,22 +235,28 @@
                   <option value="5">5</option>
                 </select>
 
-                <button type="submit" class="menu-item-cart-button">
+                <button
+                  type="submit"
+                  class="menu-item-cart-button"
+                  onclick="addToCart(this)"
+                >
                   <i class="fa-solid fa-cart-shopping"></i>
                 </button>
               </form>
             </div>
           </div>
-          <div class="menu-item">
+          <div class="menu-item" data-name="Lemon Tart" data-price="30">
             <img
               src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREcUrcH8BpmbJ7JAN8h68R9CcGICB-hFnLPw&s"
               alt=""
             />
-            <h3>Cake name</h3>
-            <p class="regular-text">Cake description</p>
-            <p class="regular-text">$0</p>
+            <h3>Lemon Tart</h3>
+            <p class="regular-text">
+              A tart with a buttery crust filled with a tangy lemon curd
+            </p>
+            <p class="regular-text">$30</p>
             <div class="menu-item-cart">
-              <form action="" method="post">
+              <form>
                 <label for="amount" class="regular-text">Amount:</label>
                 <select id="amount" class="menu-item-cart-amount" name="amount">
                   <option value="1">1</option>
@@ -228,22 +266,29 @@
                   <option value="5">5</option>
                 </select>
 
-                <button type="submit" class="menu-item-cart-button">
+                <button
+                  type="submit"
+                  class="menu-item-cart-button"
+                  onclick="addToCart(this)"
+                >
                   <i class="fa-solid fa-cart-shopping"></i>
                 </button>
               </form>
             </div>
           </div>
-          <div class="menu-item">
+          <div class="menu-item" data-name="Fruit Tart" data-price="25">
             <img
               src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREcUrcH8BpmbJ7JAN8h68R9CcGICB-hFnLPw&s"
               alt=""
             />
-            <h3>Cake name</h3>
-            <p class="regular-text">Cake description</p>
-            <p class="regular-text">$0</p>
+            <h3>Fruit Tart</h3>
+            <p class="regular-text">
+              A pastry crust filled with custard and topped with a variety of
+              fresh fruits
+            </p>
+            <p class="regular-text">$25</p>
             <div class="menu-item-cart">
-              <form action="" method="post">
+              <form>
                 <label for="amount" class="regular-text">Amount:</label>
                 <select id="amount" class="menu-item-cart-amount" name="amount">
                   <option value="1">1</option>
@@ -253,22 +298,29 @@
                   <option value="5">5</option>
                 </select>
 
-                <button type="submit" class="menu-item-cart-button">
+                <button
+                  type="submit"
+                  class="menu-item-cart-button"
+                  onclick="addToCart(this)"
+                >
                   <i class="fa-solid fa-cart-shopping"></i>
                 </button>
               </form>
             </div>
           </div>
-          <div class="menu-item">
+          <div class="menu-item" data-name="Mousse" data-price="20">
             <img
               src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREcUrcH8BpmbJ7JAN8h68R9CcGICB-hFnLPw&s"
               alt=""
             />
-            <h3>Cake name</h3>
-            <p class="regular-text">Cake description</p>
-            <p class="regular-text">$0</p>
+            <h3>Mousse (set of 6)</h3>
+            <p class="regular-text">
+              A light and airy dessert made with whipped cream and flavored with
+              chocolate, fruit, or coffee
+            </p>
+            <p class="regular-text">$20</p>
             <div class="menu-item-cart">
-              <form action="" method="post">
+              <form>
                 <label for="amount" class="regular-text">Amount:</label>
                 <select id="amount" class="menu-item-cart-amount" name="amount">
                   <option value="1">1</option>
@@ -278,22 +330,26 @@
                   <option value="5">5</option>
                 </select>
 
-                <button type="submit" class="menu-item-cart-button">
+                <button
+                  type="submit"
+                  class="menu-item-cart-button"
+                  onclick="addToCart(this)"
+                >
                   <i class="fa-solid fa-cart-shopping"></i>
                 </button>
               </form>
             </div>
           </div>
-          <div class="menu-item">
+          <!-- <div class="menu-item">
             <img
               src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREcUrcH8BpmbJ7JAN8h68R9CcGICB-hFnLPw&s"
               alt=""
             />
             <h3>Cake name</h3>
             <p class="regular-text">Cake description</p>
-            <p class="regular-text">$0</p>
+            <p class="regular-text">$20</p>
             <div class="menu-item-cart">
-              <form action="" method="post">
+              <form>
                 <label for="amount" class="regular-text">Amount:</label>
                 <select id="amount" class="menu-item-cart-amount" name="amount">
                   <option value="1">1</option>
@@ -303,62 +359,12 @@
                   <option value="5">5</option>
                 </select>
 
-                <button type="submit" class="menu-item-cart-button">
+                <button type="submit" class="menu-item-cart-button" onclick="addToCart(this)">
                   <i class="fa-solid fa-cart-shopping"></i>
                 </button>
               </form>
             </div>
-          </div>
-          <div class="menu-item">
-            <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREcUrcH8BpmbJ7JAN8h68R9CcGICB-hFnLPw&s"
-              alt=""
-            />
-            <h3>Cake name</h3>
-            <p class="regular-text">Cake description</p>
-            <p class="regular-text">$0</p>
-            <div class="menu-item-cart">
-              <form action="" method="post">
-                <label for="amount" class="regular-text">Amount:</label>
-                <select id="amount" class="menu-item-cart-amount" name="amount">
-                  <option value="1">1</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5">5</option>
-                </select>
-
-                <button type="submit" class="menu-item-cart-button">
-                  <i class="fa-solid fa-cart-shopping"></i>
-                </button>
-              </form>
-            </div>
-          </div>
-          <div class="menu-item">
-            <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREcUrcH8BpmbJ7JAN8h68R9CcGICB-hFnLPw&s"
-              alt=""
-            />
-            <h3>Cake name</h3>
-            <p class="regular-text">Cake description</p>
-            <p class="regular-text">$0</p>
-            <div class="menu-item-cart">
-              <form action="" method="post">
-                <label for="amount" class="regular-text">Amount:</label>
-                <select id="amount" class="menu-item-cart-amount" name="amount">
-                  <option value="1">1</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5">5</option>
-                </select>
-
-                <button type="submit" class="menu-item-cart-button">
-                  <i class="fa-solid fa-cart-shopping"></i>
-                </button>
-              </form>
-            </div>
-          </div>
+          </div> -->
         </div>
       </section>
     </main>
