--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,9 @@
       crossorigin="anonymous"
     ></script>
     <title>Contact</title>
+    <link rel="stylesheet" href="contact.css">
   </head>
+
   <body>
     <header>
       <div class="header-container">
@@ -35,5 +37,30 @@
         </button>
       </div>
     </header>
+
+    <div class="contact-container">
+      <h1>Contact us</h1>
+      <p>Our address is:</p>
+      <p>101, Smith Street, Vancouver, BC</p>
+      <p>Phone: 123-456-789</p>
+      <p>Sharing hapiness everywhere!<br>Join us!</p>
+      
+      <form action="/submit-form" method="post">
+          <div class="form-group">
+              <label for="name">Type your name</label>
+              <input type="text" id="name" name="name" placeholder="Type your name" required>
+          </div>
+          <div class="form-group">
+              <label for="email">Please enter a valid email address:</label>
+              <input type="email" id="email" name="email" placeholder="Please enter a valid email address:" required>
+          </div>
+          <div class="form-group">
+              <label for="message">Type your message</label>
+              <textarea id="message" name="message" placeholder="Type your message" required></textarea>
+          </div>
+          <button type="submit">Send</button>
+      </form>
+  </div>
+
   </body>
 </html>
