Confirmation screen created

--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/default.css" />
     <link rel="stylesheet" href="css/header.css" />
+    <script src="script/cart.js" defer></script>
     <script
       src="https://kit.fontawesome.com/7e4dac37c7.js"
       crossorigin="anonymous"
@@ -28,10 +29,8 @@
           </nav>
         </div>
 
-        <button class="cart-button">
-          <a href="cart.html">
-            <i class="fa-solid fa-cart-shopping"></i>
-          </a>
+        <button id="navigate-to-cart" class="cart-button">
+          <i class="fa-solid fa-cart-shopping"></i>
         </button>
       </div>
     </header>
