--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/default.css" />
     <link rel="stylesheet" href="css/home.css" />
+    <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/header.css" />
     <script src="script/cart.js" defer></script>
     <script
@@ -30,11 +31,9 @@
           </nav>
         </div>
 
-        <button class="cart-button">
-          <a href="cart.html">
-            <span id="cart-button-amount"> </span>
-            <i class="fa-solid fa-cart-shopping"></i>
-          </a>
+        <button id="navigate-to-cart" class="cart-button">
+          <span id="cart-button-amount"> </span>
+          <i class="fa-solid fa-cart-shopping"></i>
         </button>
       </div>
     </header>
