events and about page

--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/default.css" />
     <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="css/about.css" />
     <script src="script/cart.js" defer></script>
     <script
       src="https://kit.fontawesome.com/7e4dac37c7.js"
@@ -34,5 +35,61 @@
         </button>
       </div>
     </header>
+
+    <main>
+        <section>
+          <h2>About Us</h2>
+          <h4>Welcome to Manaly's Dessert Delivery!</h4>
+          <p>
+            At Manaly's, we are a dedicated team of dessert enthusiasts committed to 
+            bringing you the finest cakes and desserts right to your door. As a ghost kitchen, 
+            we specialize exclusively in delivery and pickup options, allowing us to focus on 
+            providing a seamless and efficient service. Our modern, clean approach ensures 
+            that every dessert we offer is crafted from the finest ingredients. Our greatest joy 
+            comes from witnessing the delight our cakes and desserts bring to our clients.
+          </p>
+        </section>
+  
+        <section>
+          <h3>Meet the Founders</h3>
+          <article>
+            <!-- <img src="" alt=""> -->
+             <h4>Anny</h4>
+             <p>
+              Anny is the creative force behind our dessert creations. Her passion 
+              for baking and innovative spirit ensure that each dessert is not just a 
+              treat, but a true work of art.
+             </p>
+          </article>
+  
+          <article>
+            <!-- <img src="" alt=""> -->
+             <h4>Maho</h4>
+             <p>
+              Maho handles the overall operations of the kitchen, ensuring that 
+              every dessert is prepared with the utmost care and precision.
+             </p>
+          </article>
+  
+          <article>
+            <!-- <img src="" alt=""> -->
+             <h4>Nathallye</h4>
+             <p>
+              Nathallye oversees web development and social media. She ensures
+              our online presence is engaging and up to date, making sure you never 
+              miss out on our latest treats and promotions.
+             </p>
+          </article>
+  
+          <article>
+            <!-- <img src="" alt=""> -->
+             <h4>Alicia</h4>
+             <p>
+              Alicia manages the legal and business aspects of our operations, ensuring
+              everything runs smoothly and complies with regulations.
+             </p>
+          </article>
+        </section>
+    </main>
   </body>
 </html>
