--- a/events.html
+++ b/events.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/default.css" />
     <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="css/events.css">
     <script src="script/cart.js" defer></script>
     <script
       src="https://kit.fontawesome.com/7e4dac37c7.js"
@@ -34,5 +35,82 @@
         </button>
       </div>
     </header>
+
+    <main>
+      <section>
+        <h1>Elevate Your Events with Our Dessert Tables and Boxes!</h1>
+        <p>
+          At Manaly's Dessert Delivery, we believe that desserts are the perfect way 
+          to make any event extra special. Our custom dessert tables and boxes are 
+          designed to be the highlight of your celebration, offering a delectable array 
+          of sweet treats that will impress your guests and enhance your occasion.
+        </p>
+      </section>
+
+      <section>
+        <h2>What We Offer</h2>
+        
+        <h3>Customized Dessert Tables</h3>
+        <p>
+          Whether you’re hosting a wedding, corporate event, birthday party, or any 
+          other gathering, our dessert tables can be tailored to fit the theme and style 
+          of your event. Choose from a selection of our gourmet cakes, pastries, and 
+          confections to create a spread that’s both beautiful and delicious. We also 
+          offer custom packages that include dessert bar setups, designed to match 
+          your event theme. These packages feature menu signs, stands, delivery, and 
+          cleanup. We require a rectangular table with a cloth on it to be ready for setup. 
+          Additionally, we provide donut walls, including our custom donut wall that can 
+          hold up to 30 donuts.
+        </p>
+
+        <h3>Deluxe Dessert Boxes</h3>
+        <p>
+          For a more personalized and portable dessert option, our deluxe dessert boxes 
+          are perfect. Each box is filled with a curated selection of our finest treats, including 
+          cakes, cookies, pastries, and other confections. These boxes can be customized to 
+          suit your event's theme and are a delightful way to thank your guests or provide a 
+          sweet takeaway. 
+        </p>
+        <p>
+          <strong>Features:</strong> Beautifully packaged boxes with a variety of desserts, customizable 
+          options to match your event theme, and convenient for guests to take home.
+        </p>
+      </section>
+
+      <section>
+        <h2>Image Gallery</h2>
+        <div>
+          <img src="" alt="">
+        </div>
+        <div>
+          <img src="" alt="">
+        </div>
+        <div>
+          <img src="" alt="">
+        </div>
+      </section>
+
+      <section>
+        <h2>Contact Us</h2>
+        <p>
+          Ready to add a touch of sweetness to your next event? Reach out to us to 
+          discuss your event details and dessert preferences. We’re here to help you 
+          choose the perfect options and create a customized plan for a memorable 
+          experience.
+        </p>
+        <p>
+          Our team is excited to collaborate with you to design a dessert plan that aligns 
+          perfectly with your vision. We’ll assist with everything from designing your dessert 
+          table layout to ensuring a flawless event setup. On the day of the event, we will 
+          manage all aspects of setup and delivery for your dessert table, allowing you to 
+          focus on enjoying the celebration. We also take care of the cleanup for dessert 
+          tables, or you can enjoy the convenience of our dessert boxes with minimal 
+          cleanup required.
+        </p>
+        <p>
+          We look forward to making your event unforgettable with our exquisite desserts!
+        </p>
+      </section>
+    </main>
   </body>
 </html>
