--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 Find the perfect cake for any time of day
               </h1>
               <p class="regular-text">
-                With Manaly's Cake Delivery, you receive your cake wherever you
+                With Manaly's Desserts Delivery, you receive your cake wherever you
                 are, at any time.
               </p>
             </section>
