--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       src="https://kit.fontawesome.com/7e4dac37c7.js"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <title>Home</title>
   </head>
   <body>
     <header>
